# DSA-MLOps-Bootcamp

./: README.md
Capstone/: Capstone_Details.md
Module1/: README.md
Module2/: module2.md
Module2/discrete_mathematics/: discrete_mathematics_concepts.ipynb  pyproject.toml  requirements.txt
Module2/discrete_mathematics/images/: graph  graph_dfs  graph_dfs2  product_rule_graph  simple_graph
Module2/linear_algebra/: README.md  linear_algebra_concepts.ipynb  pyproject.toml  requirements.txt
Module2/linear_algebra/.scripts/: kmeans_exercise.py  similar_titles.py
Module2/linear_algebra/data/: rcn_news_2022.csv
Module2/probability_and_statistics/: chevalier_mere_problem.ipynb  naive_bayes_multinomial.ipynb  requirements.txt
Module2/theory_computation/: README.md  finite_automata.ipynb  requirements.txt  time_complexity.ipynb
Module2/theory_computation/.scripts/: level0_odd_sum.py  level1_sum_cubes.py  level2_simple_equations.py  level_3_three_powers.py  matrix_multiplication_example.py
Module3/: README.md
Module3/sessione_2/: README.md  module_3_music_recommender.ipynb
Module4/: module4.md
Module5/: module5.md
Module6/: module6.md
Module6/session_1/: Module_6_session_1_Programming_Paradigms.ipynb  module_6_session_1_problems.ipynb
Module6/session_2/: mlops-6-monolith.py
Module6/session_4/model_deployment/app/model/: model.py
Module6/session_4/notebooks/: Module_6_session_4.ipynb
Module6/session_4/notebooks/models/: language_dec-1.0.0.pkl
Module7/: README.md
Module8/: module8.md
Module9/: module9.md
