[tool.poetry]
name = "linear-algebra"
version = "0.1.0"
description = "This env contains all needed dependences for linear algebra notebook."
authors = ["Camilo Martinez <camilo.martinez@wizeline.com>"]
license = "MLOps Bootcamp 2024"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.3"
ipykernel = "^6.29.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.0"
seaborn = "^0.13.2"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
